# rs-stellar-xdr

./: Cargo.toml  rust-toolchain.toml
src/curr/: generated.rs
tests/: serde.rs  serde_tx.rs  str.rs  tx_debug_display.rs  tx_small.rs  vecm.rs
