[package]
name = "stellar-xdr"
description = "Stellar XDR types, encoding, and decoding."
homepage = "https://github.com/stellar/rs-stellar-xdr"
repository = "https://github.com/stellar/rs-stellar-xdr"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
version = "20.0.0-rc1"
edition = "2021"
rust-version = "1.72"

[[bin]]
name = "stellar-xdr"
path = "src/bin/stellar-xdr/main.rs"
required-features = ["cli"]
doctest = false

[build_dependencies]
crate-git-revision = "0.0.6"

[dependencies]
# stellar-strkey = { version = "0.0.8", path = "../rs-stellar-strkey" }
stellar-strkey = { version = "0.0.8", git = "https://github.com/KeystoneHQ/rs-stellar-strkey.git" }
base64 = { version = "0.13", optional = true, default-features = false, features = ['alloc'] }
serde = { version = "1.0.139", features = ["derive"], optional = true, default-features = false }
serde_with = { version = "3.0.0", optional = true, default-features = false, features = ["alloc", "macros"] }
hex = { version = "0.4.3", optional = true, default-features = false, features = ["alloc"] }
arbitrary = {version = "1.1.3", features = ["derive"], optional = true}
clap = { version = "4.2.4", default-features = false, features = ["std", "derive", "usage", "help"], optional = true }
serde_json = { version = "1.0.89", optional = true, default-features = false, features = ['alloc'] }
thiserror = { version = "1.0", optional = true, package = "thiserror-core", default-features = false }
core2 = { version = "0.3", default_features = false, features = ["alloc", "nightly"] }

[dev_dependencies]
serde_json = "1.0.89"

[features]
default = ["alloc", "curr", "serde"]
std = ["alloc"]
alloc = ["dep:hex"]
curr = []
next = []

# Features dependent on optional dependencies.
base64 = ["dep:base64"]
serde = ["alloc", "dep:serde", "dep:serde_with", "hex/serde"]
serde_json = ["std", "serde", "dep:serde_json"]
arbitrary = ["std", "dep:arbitrary"]
hex = []

# Features for the CLI.
cli = ["std", "curr", "next", "base64", "serde", "serde_json", "dep:clap", "dep:thiserror"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs"]
